err/pycoinone.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/coinone'...
Listing './lib/python3.5/site-packages/coinone/api'...
Compiling './lib/python3.5/site-packages/coinone/api/base.py'...
***   File "./lib/python3.5/site-packages/coinone/api/base.py", line 11
    __origin__: typing.Type
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coinone/api/common'...
Compiling './lib/python3.5/site-packages/coinone/api/common/account.py'...
***   File "./lib/python3.5/site-packages/coinone/api/common/account.py", line 9
    avail: _T_currency
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinone/api/common/order.py'...
***   File "./lib/python3.5/site-packages/coinone/api/common/order.py", line 6
    orderId: str
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinone/api/common/public.py'...
***   File "./lib/python3.5/site-packages/coinone/api/common/public.py", line 7
    price: int
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinone/api/common/transaction.py'...
***   File "./lib/python3.5/site-packages/coinone/api/common/transaction.py", line 6
    bankCode: int
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coinone/api/v1'...
Compiling './lib/python3.5/site-packages/coinone/api/v1/account.py'...
***   File "./lib/python3.5/site-packages/coinone/api/v1/account.py", line 9
    walletAddress: str
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinone/api/v1/transaction.py'...
***   File "./lib/python3.5/site-packages/coinone/api/v1/transaction.py", line 7
    transactionId: str
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coinone/api/v2'...
Compiling './lib/python3.5/site-packages/coinone/api/v2/account.py'...
***   File "./lib/python3.5/site-packages/coinone/api/v2/account.py", line 9
    walletAddress: str
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinone/api/v2/transaction.py'...
***   File "./lib/python3.5/site-packages/coinone/api/v2/transaction.py", line 7
    txid: str
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinone/core.py'...
***   File "./lib/python3.5/site-packages/coinone/core.py", line 60
    raise RuntimeError(f"Ugly-shaped result: {repr(response)}")
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinone/error.py'...
***   File "./lib/python3.5/site-packages/coinone/error.py", line 74
    return f'<{self.__class__.__name__}.{self.name}: '\
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coinone/raw.py'...
***   File "./lib/python3.5/site-packages/coinone/raw.py", line 91
    headers: typing.Dict[str, str] = kwargs.get('_headers_', {})
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycoinone-2017.12.29a0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
